<resources>
    <string name="app_name">Bowles Hall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_startup">Bowles Hall</string>
    <string name="email_hint">you@berkeley.edu</string>
    <string name="password_hint">password</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>

    <string name="google_client_id">249176717954-nng0kusrd5pm4t869o3r47080udb3hqn.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_title_home">Home</string>
    <string name="nav_title_events">Events</string>
    <string name="nav_title_account">Account</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_signout">Sign Out</string>
</resources>
