<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_title_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/nav_title_events" />
    </group>

    <item android:title="@string/nav_title_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_title_settings" />
            <!--android:icon="@drawable/ic_menu_share"-->
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/nav_title_signout" />
        </menu>
    </item>

</menu>
