<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity"
    tools:showIn="@layout/activity_login">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/bowlescrestphoenixsmall"
        android:contentDescription="@string/app_name"/>
    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:inputType="textEmailAddress|textAutoComplete"
        android:hint="@string/email_hint"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/text_color"
        android:imeOptions="actionNext"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/passwordtext"
        android:layout_below="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/text_color" />
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_below="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/text_color"/>
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup"
        android:text="@string/sign_up"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/text_color"
        android:layout_below="@+id/login"/>
</RelativeLayout>
